Ajout Vector class + correction Canvas

--- a/test/index.html
+++ b/test/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
 
-    <canvas style="position:absolute;top:0;left:0" id="background"></canvas>
-    <canvas style="position:absolute;top:0;left:0" id="game"></canvas>
-    <canvas style="position:absolute;top:0;left:0" id="foreground"></canvas>
+    <canvas style="position:absolute;top:0;left:0;border:1px solid red" id="background"></canvas>
+    <canvas style="position:absolute;top:0;left:0;border:1px solid red" id="game"></canvas>
+    <canvas style="position:absolute;top:0;left:0;border:1px solid red" id="foreground"></canvas>
 
     <script type="text/javascript" src="../dist/game.js"></script>
     <script type="text/javascript" src="main.js"></script>
